2005-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/tie-formatting-problem.hh (class
	Tie_formatting_problem): new file.

	* lily/tie-formatting-problem.cc (common_x_refpoint): new file.

	* Documentation/misc/ChangeLog-2.3:  new file.

	* lily/audio-staff.cc (output): degarianize.

2005-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/python-module-rules.make ($(outdir)/%.pyc):
	Unset PYTHONOPTIMIZE.  Fixes install if set.

2005-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/convertrules.py (conv): add warning about drums. 

	* make/stepmake.make: include toplevel-version.make after config.make.

	* stepmake/aclocal.m4 (depth): make sure $srcdir is absolute.
	also allow python2.4

	* config.make.in (configure-srcdir): remove GXX GCC vars.

	* stepmake/aclocal.m4: don't do non-srcdir build with
	symlinks. Use inclusion, so the src directory name can be changed.

2005-11-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/mutopia-vars.make:
	* make/ly-vars.make: Use src-wildcard iso wildcard for source
	files.

2005-11-13  Werner Lemberg  <wl@gnu.org>

	* mf/feta-arrow.mf: For all glyphs, don't mirror `currentpicture'
	but the affected path.  This ensures that the (overlapping) outlines
	have the same direction, which is a necessary prerequisite for
	FontForge's algorithm to remove overlaps.
	Formatting.

	* mf/feta-haak.mf: Formatting.
	(draw_bracket): Slightly modify outline to avoid an unnecessary
	corner.
	Don't use ad-hoc values for `leave_angle' and `tip_angle' but derive
	them from the affected paths.

2005-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/README: remove xpm / accordion notes.

	* lily/tie-column-format.cc (set_chord_outline): add dots into
	skyline extents. This fixes tie formatting if the left head has dots.

	* lily/tie.cc (get_configuration): only shift tie by a whole staff
	space inside the staff.
	(get_configuration): shift another position if necessary in case
	of left head tie  
