@@ -91,7 +91,7 @@ DEFS = @DEFS@
 DOTEXE = @DOTEXE@
 FIND = @FIND@
 FLEX = @FLEX@
-FLEXLEXER_PATH = @FLEXLEXER_PATH@
+FLEXLEXER_FILE = @FLEXLEXER_FILE@
 FONTFORGE = @FONTFORGE@
 GROFF = @GROFF@
 GUILE = @GUILE@
