@@ -1,3 +1,9 @@
+2005-11-15  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* stepmake/aclocal.m4 (depth): Explain why absolute directory is
+	used and do not call it a path.
+	(FLEXLEXER_FILE): Rename from FLEXLEXER_PATH and add file name.
+
 2005-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/include/tie-formatting-problem.hh (class
